# blackneedles

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci_cd.yml
blackneedles/: __init__.py  __main__.py  connection.py  console.py  models.py
blackneedles/commands/: compute_pool.py  service.py
blackneedles/models/: compute_pool.py  service.py
blackneedles/procedures/: grant_permissions.sql  monitoring_procedures.sql  uninstall.sql
tests/: test_connection.py
tests/utils/: test_logs.py
utils/: logs.py
