[tool.poetry]
name = "blackneedles"
version = "0.1.3"
description = ""
authors = ["Thiago F Pappacena <pappacena@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# Note: snowflake-snowpark-python requires <3.12. Fix this once they support 3.12
python = "^3.8,<3.12"
typer = "^0.11.0"
snowflake-connector-python = "^3.7.1"
snowflake-snowpark-python = "^1.14.0"
pydantic = "^2.6.4"
ipython = "^8.0.0"
rich = "^13.7.1"
sqlparse = "^0.4.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pytest = "^8.1.1"
pre-commit = "^3.0.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
blackneedles = "blackneedles.__main__:app"
